<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    android:orientation="vertical"
    tools:context="com.jjgo.education.education.Menu12Activity">

    <!--  상단 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/p001_ci" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/p001_subtitle"
            android:textColor="#000000"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="right"
                android:gravity="right"
                android:scaleType="fitXY"
                android:src="@drawable/img_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_back"
                android:text="돌아가기"
                android:textColor="@color/textColor_black"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/button_menu12"
        android:textColor="@color/textColor_black"
        android:textSize="60sp" />

    <LinearLayout
        android:id="@+id/ll_cpr_first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

            <ImageView
                android:id="@+id/img_cpr"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:layout_centerInParent="true"
                android:src="@drawable/img_cpr" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_firstaid_selection"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_firstaid_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="208dp"
                android:background="@drawable/button_background"
                android:text="@string/CPR_education"
                android:textColor="@color/textColor_black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_firstaid_gear"
                android:layout_width="400dp"
                android:layout_height="100dp"
                android:layout_alignLeft="@+id/btn_firstaid_education"
                android:layout_alignStart="@+id/btn_firstaid_education"
                android:layout_centerVertical="true"
                android:background="@drawable/button_background"
                android:text="장비 매뉴얼"
                android:textColor="@color/textColor_black"
                android:textSize="40sp"
                android:textStyle="bold"
                android:visibility="gone" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_firstaid_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_firstaid_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@color/textColor_black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/firstaid_pdf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"/>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
