<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    android:orientation="vertical"
    tools:context="com.jjgo.education.education.Menu8Activity">

    <!--  상단 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/p001_ci" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/p001_subtitle"
            android:textColor="#000000"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="right"
                android:gravity="right"
                android:scaleType="fitXY"
                android:src="@drawable/img_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_back"
                android:text="돌아가기"
                android:textColor="@color/textColor_black"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/button_menu8"
        android:textColor="@color/textColor_black"
        android:textSize="60sp" />

    <!-- Content -->

    <LinearLayout
        android:id="@+id/rl_crane_selection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

            <ImageView
                android:id="@+id/img_falls_check"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:src="@drawable/img_check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_falls_check"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="준비"
                android:textColor="@color/textColor_black"
                android:textSize="30sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_crane_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/CPR_education"
                android:textColor="@color/textColor_black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_crane_gear"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/CPR_gear"
                android:textColor="@color/textColor_black"
                android:textSize="40sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_crane_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:id="@+id/ll_moving_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal">


            <ImageView
                android:id="@+id/img_up"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/img_up" />

            <TextView
                android:id="@+id/tv_ascend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_up"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:layout_centerHorizontal="true"
                android:text="상승"
                android:textColor="@color/textColor_black"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/img_down"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@id/tv_ascend"
                android:layout_centerHorizontal="true"
                android:src="@drawable/img_down" />

            <TextView
                android:id="@+id/tv_descend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_down"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="하강"
                android:textColor="@color/textColor_black"
                android:textSize="30sp" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_stop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/tv_emergency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="end|center_vertical"
                android:layout_weight="1"
                android:text="긴급"
                android:textColor="@color/textcolor_Red"
                android:textSize="60sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btn_stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:scaleType="centerCrop"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/img_power" />

            <TextView
                android:id="@+id/tv_stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="정지"
                android:textColor="@color/textcolor_Red"
                android:textSize="60sp"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_crane_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_crane_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="@color/textColor_black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/crane_pdf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"/>
    </LinearLayout>


</LinearLayout>
