<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blue_background"
    tools:context="com.jjgo.education.education.Menu5Activity">

    <!--  상단 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/p001_ci" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/p001_subtitle"
            android:textColor="#000000"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="right"
                android:gravity="right"
                android:scaleType="fitXY"
                android:src="@drawable/img_back"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_back"
                android:text="돌아가기"
                android:textColor="@color/textColor_black"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/button_menu5"
        android:textSize="60sp"
        android:textColor="@color/textColor_black"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/ll_falls_first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

            <ImageView
                android:id="@+id/img_falls_check"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/img_check"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/img_falls_check"
                android:layout_centerHorizontal="true"
                android:text="준비"
                android:textSize="30sp"
                android:textColor="@color/textColor_black"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_falls_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/CPR_education"
                android:textColor="@color/textColor_black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_falls_gear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="장비매뉴얼"
                android:textColor="@color/textColor_black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_falls_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

            <ImageView
                android:id="@+id/img_falls_start"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/img_proceed"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/img_falls_start"
                android:layout_centerHorizontal="true"
                android:text="낙하물 낙하"
                android:textSize="30sp"
                android:textColor="@color/textColor_black"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_falls_stop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="3">

            <TextView
                android:id="@+id/tv_emergency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="end|center_vertical"
                android:layout_weight="1"
                android:text="긴급"
                android:textSize="60sp"
                android:textColor="@color/textcolor_Red"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/btn_stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:scaleType="centerCrop"
                android:background="@drawable/img_power"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="start|center_vertical"
                android:layout_weight="1"
                android:text="정지"
                android:textSize="60sp"
                android:textColor="@color/textcolor_Red"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_falls_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="gone">


        <TextView
            android:id="@+id/tv_pdf_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="30dp"
            android:textColor="@color/textColor_black"/>
        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/falls_pdf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</LinearLayout>
